bcm4330: Update Makefile

--- a/drivers/net/wireless/bcm4330/Makefile
+++ b/drivers/net/wireless/bcm4330/Makefile
@@ -1,10 +1,11 @@
 # bcm4330
 DFLAGS = -Wall -Wstrict-prototypes -DLINUX -Dlinux -Idrivers/net/wireless/bcm4330 -Idrivers/net/wireless/bcm4330/include
 
-DFLAGS += -DBCMDRIVER -DBCMFILEIMAGE -DBCMSDIO -DBDC -DTOE   \
-	-DBCMDONGLEHOST -DUNRELEASEDCHIP -DBCMDMA32 -DWLBTAMP    \
-	-DDHDTHREAD -DDHD_GPL -DDHD_SCHED -DDHD_DEBUG -DSDTEST   \
-	-DDHD_BCMEVENTS -DSHOW_EVENTS -DDONGLEOVERLAYS -DBCMDBG
+DFLAGS += -DBCMDRIVER -DDHDTHREAD -DBDC -DTOE
+#DFLAGS += -DBCMSDIO -DBCMFILEIMAGE -DBCMDONGLEHOST
+#DFLAGS += -DUNRELEASEDCHIP -DBCMDMA32 -DWLBTAMP
+#DFLAGS += -DDHD_GPL -DDHD_SCHED -DDHD_DEBUG -DSDTEST
+#DFLAGS += -DDHD_BCMEVENTS -DSHOW_EVENTS -DDONGLEOVERLAYS -DBCMDBG
 
 DFLAGS += -DOOB_INTR_ONLY
 DFLAGS += -DHW_OOB
