Bluetooth: huawei derp with kernel, do things sensibly

--- a/arch/arm/configs/hw_msm7x27a_defconfig
+++ b/arch/arm/configs/hw_msm7x27a_defconfig
@@ -78,7 +78,7 @@ CONFIG_PREEMPT_RCU=y
 # CONFIG_RCU_BOOST is not set
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
-CONFIG_LOG_BUF_SHIFT=21
+CONFIG_LOG_BUF_SHIFT=17
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
@@ -148,7 +148,6 @@ CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
 CONFIG_OPROFILE=y
 CONFIG_HAVE_OPROFILE=y
-#enable the systemtap debug feature
 CONFIG_KPROBES=y
 # CONFIG_JUMP_LABEL is not set
 CONFIG_KRETPROBES=y
@@ -1004,7 +1003,6 @@ CONFIG_HAVE_BPF_JIT=y
 # Network testing
 #
 # CONFIG_NET_PKTGEN is not set
-#enable the systemtap debug feature
 # CONFIG_NET_TCPPROBE is not set
 # CONFIG_NET_DROP_MONITOR is not set
 # CONFIG_HAMRADIO is not set
@@ -1379,7 +1377,6 @@ CONFIG_PPP_FILTER=y
 CONFIG_PPP_MPPE=y
 CONFIG_PPP_MULTILINK=y
 CONFIG_PPPOE=m
-CONFIG_PPPOL2TP=y
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
 CONFIG_PPP_ASYNC=y
@@ -1701,7 +1698,6 @@ CONFIG_GPIO_SX150X=y
 # MODULbus GPIO expanders:
 #
 # CONFIG_GPIO_PM8XXX_RPC is not set
-# huawei gpio sleep driver with mtk
 CONFIG_GPIO_SLEEP=y
 # CONFIG_W1 is not set
 CONFIG_POWER_SUPPLY=y
@@ -2132,7 +2128,7 @@ CONFIG_HUAWEI_CAMERA_SENSOR_MT9V113=y
 # CONFIG_HUAWEI_SENSOR_OV7690 is not set
 # CONFIG_HUAWEI_SENSOR_OV7736 is not set
 # CONFIG_HUAWEI_SENSOR_HIMAX0356 is not set
-# CONFIG_HUAWEI_SENSOR_MT9D113 is not set
+CONFIG_HUAWEI_SENSOR_MT9D113=y
 # CONFIG_HUAWEI_SENSOR_MT9V114 is not set
 CONFIG_HUAWEI_SENSOR_MT9P017=y
 # CONFIG_HUAWEI_SENSOR_OV5647_SUNNY is not set
