--- a/arch/arm/configs/hw_msm7x27a_defconfig
+++ b/arch/arm/configs/hw_msm7x27a_defconfig
@@ -1664,7 +1664,7 @@ CONFIG_HUAWEI_FEATURE_TPA2028D1_AMPLIFIER=y
 CONFIG_HUAWEI_FEATURE_SENSORS_AK8975=y
 CONFIG_QWERTY_KEYPAD_ADP5587=y
 CONFIG_HUAWEI_FEATURE_SENSORS_AK8963=y
-CONFIG_HUAWEI_I2C_DEBUG_TOOL=y
+# CONFIG_HUAWEI_I2C_DEBUG_TOOL is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
